Add nft example

--- a/examples/index.html
+++ b/examples/index.html
@@ -108,6 +108,43 @@
 
 
 
+
+		<h2>NFT examples</h2>
+		<div class="example">
+			<a href="nft_init_test.html">
+				nft_init_test
+			</a>
+			<p>Uses pre-recorded video.
+			<p>Not interactive. Draws a cube on top of last detected marker square.
+		</div>
+		<div class="example">
+			<a href="nft_threejs.html">
+				nft_threejs
+			</a>
+			<p>Uses pre-recorded video.
+			<p>Not interactive. Draws a cube on top of last detected marker square.
+		</div>
+		<div class="example">
+			<a href="nft_worker_init_test.html">
+				nft_worker_init_test
+			</a>
+			<p>Uses pre-recorded video.
+			<p>Not interactive. Draws a cube on top of last detected marker square.
+		</div>
+		<div class="example">
+			<a href="nft_worker_rtc_test.html">
+				nft_worker_rtc_test
+			</a>
+			<p>Uses pre-recorded video.
+			<p>Not interactive. Draws a cube on top of last detected marker square.
+		</div>
+		<div class="example">
+			<a href="nft_worker_threejs.html">
+				nft_worker_threejs
+			</a>
+			<p>Uses pre-recorded video.
+			<p>Not interactive. Draws a cube on top of last detected marker square.
+		</div>
 	</body>
 
 </html>
