Bug fix on worker

--- a/examples/nft_init_test.html
+++ b/examples/nft_init_test.html
@@ -14,12 +14,12 @@ cameraParam.onload = function() {
 	arController._initNFT();
 	arController.debugSetup();
 
-	arController.loadNFTMarker('DataNFT/pinball', function(markerId) { 
+	arController.loadNFTMarker('/jsartoolkit5/examples/DataNFT/pinball', function(markerId) { 
 		console.log('Created NFT marker', arguments);
 	});
 
 };
-cameraParam.load('Data/camera_para.dat');
+cameraParam.load('/jsartoolkit5/examples/Data/camera_para.dat');
 
 
 </script>
