--- a/examples/nft_worker_threejs.html
+++ b/examples/nft_worker_threejs.html
@@ -27,26 +27,26 @@ html,body {
 
 <p>&larr; <a href="index.html">Back to examples</a></p>
 
-<script async src="../build/artoolkit.min.js"></script>
+<script async src="../build/artoolkit.debug.js"></script>
 <script async src="js/third_party/three.js/three.min.js"></script>
 <script async src="../js/artoolkit.three.js"></script>
-
+<script async src="../js/artoolkit.api.js"></script>
 <script src="../js/artoolkit.proxy.js"></script>
 
 <script>
 
 window.ARThreeOnLoad = function() {
 
-	ARController.getUserMediaThreeScene({maxARVideoSize: 320, cameraParam: 'Data/camera_para-iPhone 5 rear 640x480 1.0m.dat', 
+	ARController.getUserMediaThreeScene({maxARVideoSize: 320, cameraParam: '/jsartoolkit5/examples/Data/camera_para-iPhone 5 rear 640x480 1.0m.dat', 
 	onSuccess: function(arScene, arController, arCamera) {
 
-		var proxy = new ARProxy(arController, '/examples/Data/camera_para-iPhone 5 rear 640x480 1.0m.dat', function() { console.log("got new", arguments); });
+		var proxy = new ARProxy(arController, '/jsartoolkit5/examples/Data/camera_para-iPhone 5 rear 640x480 1.0m.dat', function() { console.log("got new", arguments); });
 
 		proxy.addEventListener('load', function(ev) {
 			console.log('ARController loaded', ev);
 
 			this.processingDone = false;
-			this.loadNFTMarker('/examples/DataNFT/pinball', function(ev) {
+			this.loadNFTMarker('/jsartoolkit5/examples/DataNFT/pinball', function(ev) {
 				console.log('Created NFT marker', ev.result[0]);
 
 				var markerRoot = this.arController.createThreeNFTMarker(ev.result[0]);
